# insurance-jlm

./: README.md  pyproject.toml
notebooks/: demo.py
src/insurance_jlm/: __init__.py
src/insurance_jlm/data/: __init__.py  loaders.py  validation.py
src/insurance_jlm/diagnostics/: __init__.py  calibration.py  residuals.py
src/insurance_jlm/models/: __init__.py  joint_model.py  longitudinal.py  quadrature.py  survival.py
src/insurance_jlm/prediction/: __init__.py  dynamic.py  landmarks.py
src/insurance_jlm/viz/: __init__.py  plots.py
tests/: conftest.py  test_data.py  test_diagnostics.py  test_dynamic.py  test_joint_model.py  test_loaders.py  test_longitudinal.py  test_quadrature.py  test_survival.py
