[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-jlm"
version = "0.1.1"
description = "Joint Longitudinal-Survival Models for insurance pricing. Shared Random Effects Model linking telematics trajectories to claim hazard."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = ["insurance", "telematics", "survival", "longitudinal", "joint model", "EM algorithm", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "statsmodels>=0.14.5",
    "lifelines>=0.28",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.urls]
Repository = "https://github.com/burning-cost/insurance-jlm"
Issues = "https://github.com/burning-cost/insurance-jlm/issues"
Homepage = "https://github.com/burning-cost/insurance-jlm"
Documentation = "https://github.com/burning-cost/insurance-jlm#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_jlm"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
